<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:text="@string/saved"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/reported_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/reported"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/surname"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reported_surname"
            style="@style/reported"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/classs"/>
        <TextView
            android:id="@+id/reported_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/reported"/>

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/back"/>

    </LinearLayout>

</LinearLayout>